<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sujanth.musicalstructureapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/main_bg"
                android:scaleType="fitCenter"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Musical Structure App"
                android:layout_centerHorizontal="true"
                android:textSize="22sp"
                android:textColor="#0091EA"
                android:layout_alignParentBottom="true"
                android:textStyle="bold"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/library_button"
                android:text="@string/library"
                style="@style/category"
                android:background="@color/library_category_bg"/>

            <Button
                android:id="@+id/artist_button"
                android:text="@string/artist"
                style="@style/category"
                android:background="@color/artist_category_bg"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/playlist_button"
                android:text="@string/playlist"
                style="@style/category"
                android:background="@color/playlist_category_bg"/>

            <Button
                android:id="@+id/store_button"
                android:text="@string/store"
                style="@style/category"
                android:background="@color/store_category_bg"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
